版本: 5539 作者: mars 日期: 2013/9/23 18:18 訊息: 1. 改名 Set => Channel 頻道組 => 頻道 Channel => Program 頻道 => 節目 Episode and Sub-episode remains the same, ---- 異動 : /lang/zh.json 異動 : /lang/en.json 異動 : /javascripts/v3/func.curation.js 異動 : /javascripts/v3/func.channel-poi.js 異動 : /javascripts/v3/func.channel.js 異動 : /javascripts/v3/func.epcurate.js 異動 : /javascripts/v3/func.episode.js 異動 : /javascripts/v3/func.portal.store.js 異動 : /javascripts/v3/domready.portal.store.js 異動 : /javascripts/v3/domready.portal.manage.js 異動 : /javascripts/v3/func.portal.manage.js 異動 : /javascripts/v3/domready.index.js 異動 : /epcurate-curation.html 異動 : /signin.html 異動 : /store-manage.html 異動 : /brand-setting.html 異動 : /portal-manage.html 異動 : /cms-settings.html 異動 : /channel-add.html 異動 : /channel-setting.html 異動 : /channel-poi.html 異動 : /episode-list.html 異動 : /index.html
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5540 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/brand-setting.html
+++ b/brand-setting.html
@@ -37,7 +37,7 @@
     <div class="studio-nav-wrap">
         <h3><a href="index.html"><span class="cms-icon">CMS</span><span class="sub-title">Content Management System</span></a></h3>
         <ul>
-            <li><span><a href="index.html">My Channels</a></span></li>
+            <li><span><a href="index.html">My Programs</a></span></li>
             <li class="on"><span><a href="portal-manage.html">My Portal</a></span></li>
         </ul>
         <div class="studio-setup">
@@ -58,7 +58,7 @@
         <div id="func-nav">
             <ul>
                 <li><a href="portal-manage.html" class="portal langkey">My Portal</a></li>
-                <li><a href="store-manage.html" class="store langkey">Channel Store</a></li>
+                <li><a href="store-manage.html" class="store langkey">Program Store</a></li>
                 <li class="active"><a href="brand-setting.html" class="brand langkey">Brand Settings</a></li>
             </ul>
         </div>
