--- a/cms-settings.html
+++ b/cms-settings.html
@@ -37,7 +37,7 @@
     <div class="studio-nav-wrap">
         <h3><a href="index.html"><span class="cms-icon">CMS</span><span class="sub-title">Content Management System</span></a></h3>
         <ul>
-            <li><span><a href="index.html">My Channels</a></span></li>
+            <li><span><a href="index.html">My Programs</a></span></li>
             <li id="my-portal" class="hide"><span><a href="portal-manage.html">My Portal</a></span></li>
         </ul>
         <div class="studio-setup click">
@@ -89,7 +89,7 @@
     <div class="overlay-container">
         <div class="overlay-wrap">
             <a href="#" class="btn-close">Close</a>
-            <p class="content">You are not authorized to edit this channel.</p>
+            <p class="content">You are not authorized to edit this program.</p>
             <div class="overlay-btn">
                 <p class="btns btn-ok"><span><a href="#">OK</a></span></p>
             </div>
@@ -133,7 +133,7 @@
                 <a href="#" class="switch-on hide">ON</a>
                 <a href="#" class="switch-off">OFF</a>
             </p>
-            <p class="content">After connecting, you can enable Facebook auto sharing for each channel in Channel settings.</p>
+            <p class="content">After connecting, you can enable Facebook auto sharing for each program in Program settings.</p>
         </div>
     </div>
 </div>
@@ -150,7 +150,7 @@
                 <img src="images/icon_fb.png" alt="facebook" class="icon" />
                 <p class="btns btn-reconnect"><span class="btn-right"><a href="#">Restart connection</a></span></p>
             </div>
-            <p class="content">After connecting, you can enable Facebook auto sharing for each channel in Channel settings.</p>
+            <p class="content">After connecting, you can enable Facebook auto sharing for each program in Program settings.</p>
             <p class="content notice">Auto sharing is disabled because permission to your connected account has been revoked, please click to restart the connection.</p>
         </div>
     </div>
@@ -163,7 +163,7 @@
         <div class="overlay-wrap disconnect">
             <a href="#" class="btn-close">Close</a>
             <h4 class="cms-setup">Connect to Facebook</h4>
-            <p class="content">Disconnecting account will also disable auto sharing for every channel. Are you sure you want to disconnect?</p>
+            <p class="content">Disconnecting account will also disable auto sharing for every program. Are you sure you want to disconnect?</p>
             <div class="overlay-btn">
                 <p class="btns btn-no"><span><a href="#">No</a></span></p>
                 <p class="btns btn-disconnect"><span><a href="#">Disconnect</a></span></p>
