--- a/portal-manage.html
+++ b/portal-manage.html
@@ -38,7 +38,7 @@
     <div class="studio-nav-wrap">
         <h3><a href="index.html"><span class="cms-icon">CMS</span><span class="sub-title">Content Management System</span></a></h3>
         <ul>
-            <li><span><a href="index.html">My Channels</a></span></li>
+            <li><span><a href="index.html">My Programs</a></span></li>
             <li class="on"><span><a href="portal-manage.html">My Portal</a></span></li>
         </ul>
         <div class="studio-setup">
@@ -63,7 +63,7 @@
                     <ul class="sub-nav">
                     </ul>
                 </li>
-                <li><a href="store-manage.html" class="store langkey">Channel Store</a></li>
+                <li><a href="store-manage.html" class="store langkey">Program Store</a></li>
                 <li><a href="brand-setting.html" class="brand langkey">Brand Settings</a></li>
             </ul>
         </div>
@@ -82,7 +82,7 @@
         <div id="portal-layer">
             <form id="portal-manage" onsubmit="return false;">
             </form>
-            <h2 id="cntChannelEmpty" style="display:none" class="langkey">You can add 27 channels into your channel set.</h2>
+            <h2 id="cntChannelEmpty" style="display:none" class="langkey">You can add 27 programs into your channel.</h2>
             <div id="portal-constrain">
                 <div id="portal-list">
                     <ul id="channel-list" class="channel-list">
@@ -127,7 +127,7 @@
     <div class="overlay-container">
         <div class="overlay-wrap">
             <a href="#" class="btn-close">Close</a>
-            <p class="content">You will change the order of channel list to "update time", it will sort by update time of channels automatically so you can't change the order manually except set on top channels.</p>
+            <p class="content">You will change the order of program list to "update time", it will sort by update time of programs automatically so you can't change the order manually except set on top programs.</p>
             <div class="overlay-btn">
                 <p class="btns btn-no"><span><a href="#">No</a></span></p>
                 <p class="btns btn-yes"><span><a href="#">Yes</a></span></p>
@@ -172,23 +172,23 @@
         <div class="msg-left"></div>
         <div class="msg-center">
             <p class="btn-msg-close"></p>
-            <h2 id="search-title">Add channels into your “<span>Set 2</span>”</h2>
+            <h2 id="search-title">Add programs into your “<span>Set 2</span>”</h2>
             <form onsubmit="return false;">
-                <span class="form-title langkey">Set Name:</span>
+                <span class="form-title langkey">Channel Name:</span>
                 <div class="select-gray" id="select-portal-ch">
                     <div class="select-content-gray">
                         <p id="btn-portal-ch" class="select-btn"></p>
-                        <p id="txt-portal-ch" class="select-txt-gray langkey">Channel URL</p>
+                        <p id="txt-portal-ch" class="select-txt-gray langkey">Program URL</p>
                         <ul id="dropdown-portal-ch" class="select-dropdown" kvale="url">
-                            <li kvale="url" data-tvalue="Please input channel URL" class="on langkey">Channel URL</li>
-                            <li kvale="keywords" data-tvalue="Please input channel name or curator name" class="langkey">Keywords</li>
+                            <li kvale="url" data-tvalue="Please input program URL" class="on langkey">Program URL</li>
+                            <li kvale="keywords" data-tvalue="Please input program name or curator name" class="langkey">Keywords</li>
                         </ul>
                     </div>
                 </div>
                 <div class="input-gray">
                     <p class="left"></p>
                     <p class="center">
-                        <input id="input-portal-ch" class="textfield langkeyVal" value="Please input channel URL" style="width: 100%" />
+                        <input id="input-portal-ch" class="textfield langkeyVal" value="Please input program URL" style="width: 100%" />
                     </p>
                     <p class="right"></p>
                 </div>
@@ -252,7 +252,7 @@
 <input type="hidden" id="sortingType" name="sortingType" value="${sortingType}" />
 <div class="clearfix">
     <span class="required-field">*</span>
-    <span class="form-title">${nn._([cms.global.PAGE_ID, 'channel-list', 'Set Name'])}:</span>
+    <span class="form-title">${nn._([cms.global.PAGE_ID, 'channel-list', 'Channel Name'])}:</span>
     <div class="input-white" id="set-title">
         <p class="left"></p>
         <input id="setName" name="name" value="${name}" class="center" />
@@ -262,7 +262,7 @@
     <span id="msg-portal" class="msg-error"></span>
 </div>
 <div class="clearfix sort">
-    <span class="form-title">${nn._([cms.global.PAGE_ID, 'channel-list', 'Channel List'])}: </span> <p class="number"><span id="channelCnt">${channelCnt}</span> ${nn._([cms.global.PAGE_ID, 'channel-list', 'Channels'])}</p>
+    <span class="form-title">${nn._([cms.global.PAGE_ID, 'channel-list', 'Program List'])}: </span> <p class="number"><span id="channelCnt">${channelCnt}</span> ${nn._([cms.global.PAGE_ID, 'channel-list', 'Programs'])}</p>
     <ul class="sort-list">
         <li class="head">${nn._([cms.global.PAGE_ID, 'channel-list', 'Sorted by'])}: </li>
         <li tvalue="2" class="sType {{if sortingType == 2}}on{{/if}}">${nn._([cms.global.PAGE_ID, 'channel-list', 'Updated time'])}</li>
@@ -299,7 +299,7 @@
             <img src="thumbnail/ch_default.png" alt="" />
         </div>
     </div>
-    <p class="ch-title addChanel">+ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Add channels'])}<br />${nn._([cms.global.PAGE_ID, 'channel-list', 'Add channels sub'])}</p>
+    <p class="ch-title addChanel">+ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Add programs'])}<br />${nn._([cms.global.PAGE_ID, 'channel-list', 'Add programs sub'])}</p>
 </li>
 </script>
 <!-- portal-set-empty-chanels-tmpl End -->
@@ -322,7 +322,7 @@
                 <div class="icon-holder"></div>
                 <div class="tip-white">
                     <p class="left"></p>
-                    <p class="center">${nn._([cms.global.PAGE_ID, 'channel-list', 'Remove channel'])}</p>
+                    <p class="center">${nn._([cms.global.PAGE_ID, 'channel-list', 'Remove program'])}</p>
                     <p class="right"></p>
                 </div>
                 <div class="tip-top"></div>
@@ -354,7 +354,7 @@
                 <div class="icon-holder"></div>
                 <div class="tip-white">
                     <p class="left"></p>
-                    <p class="center">${nn._([cms.global.PAGE_ID, 'channel-list', 'Remove channel'])}</p>
+                    <p class="center">${nn._([cms.global.PAGE_ID, 'channel-list', 'Remove program'])}</p>
                     <p class="right"></p>
                 </div>
                 <div class="tip-top"></div>
