--- a/signin.html
+++ b/signin.html
@@ -35,7 +35,7 @@
 <div id="login-layer">
     <div id="login-holder">
         <h1 class="langkey">Collect and Curate!</h1>
-        <h3 class="langkey">CMS is the management center for your 9x9.tv list-form channels!</h3>
+        <h3 class="langkey">CMS is the management center for your 9x9.tv list-form programs!</h3>
         <h2 class="langkey">Sign In</h2>
         <form id="login-form">
             <div class="btn-fb">
