--- a/store-manage.html
+++ b/store-manage.html
@@ -38,7 +38,7 @@
     <div class="studio-nav-wrap">
         <h3><a href="index.html"><span class="cms-icon">CMS</span><span class="sub-title">Content Management System</span></a></h3>
         <ul>
-            <li><span><a href="index.html">My Channels</a></span></li>
+            <li><span><a href="index.html">My Programs</a></span></li>
             <li class="on"><span><a href="portal-manage.html">My Portal</a></span></li>
         </ul>
         <div class="studio-setup">
@@ -59,7 +59,7 @@
         <div id="func-nav">
             <ul>
                 <li><a href="portal-manage.html" class="portal langkey">My Portal</a></li>
-                <li class="active"><a href="store-manage.html" class="store langkey">Channel Store</a></li>
+                <li class="active"><a href="store-manage.html" class="store langkey">Program Store</a></li>
                 <li><a href="brand-setting.html" class="brand langkey">Brand Settings</a></li>
             </ul>
         </div>
@@ -68,7 +68,7 @@
     <div id="main-wrap-slider" class="slider-wrap"><div class="slider-vertical"></div></div>
     <div id="content-main">
         <div id="title-func" class="clearfix">
-            <h2><span class="langkey">Channel Store</span> &gt; <span class="func_name"></span></h2>
+            <h2><span class="langkey">Program Store</span> &gt; <span class="func_name"></span></h2>
             <ul>
                 <li id="set-save" class="last"><p class="btns"><span><a href="javascript:void(0)" class="langkey">Save</a></span></p></li>
             </ul>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="clear info">
                     <span class="form-title"></span>
-                    <span class="form-content langkey">You can manage your channel store manually.</span>
+                    <span class="form-content langkey">You can manage your program store manually.</span>
                 </div>
             </div>
             <div id="store-constrain">
@@ -180,7 +180,7 @@
                 <div class="icon-holder"></div>
                 <div class="tip-white">
                     <p class="left"></p>
-                    <p id="" class="center">${nn._([cms.global.PAGE_ID, 'channel-list', 'Add channel'])}</p>
+                    <p id="" class="center">${nn._([cms.global.PAGE_ID, 'channel-list', 'Add program'])}</p>
                     <p class="right"></p>
                 </div>
                 <div class="tip-top"></div>
@@ -203,7 +203,7 @@
                 <div class="icon-holder"></div>
                 <div class="tip-white">
                     <p class="left"></p>
-                    <p class="center">${nn._([cms.global.PAGE_ID, 'channel-list', 'Remove channel'])}</p>
+                    <p class="center">${nn._([cms.global.PAGE_ID, 'channel-list', 'Remove program'])}</p>
                     <p class="right"></p>
                 </div>
                 <div class="tip-top"></div>
