--- a/channel-add.html
+++ b/channel-add.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="stylesheets/lightbox.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/uniform.css?v=1278" />
 <link rel="stylesheet" href="stylesheetsv3/channel.css?v=1278" />
-<title>9x9.tv - Create a new channel</title>
+<title>9x9.tv - Create a new program</title>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -37,7 +37,7 @@
     <div class="studio-nav-wrap">
         <h3><a href="index.html"><span class="cms-icon">CMS</span><span class="sub-title">Content Management System</span></a></h3>
         <ul>
-            <li class="on"><span><a href="index.html">My Channels</a></span></li>
+            <li class="on"><span><a href="index.html">My Programs</a></span></li>
             <li id="my-portal" class="hide"><span><a href="portal-manage.html">My Portal</a></span></li>
         </ul>
         <div class="studio-setup">
@@ -93,7 +93,7 @@
     <div class="overlay-container">
         <div class="overlay-wrap">
             <a href="#" class="btn-close">Close</a>
-            <p class="content">You are not authorized to edit this channel.</p>
+            <p class="content">You are not authorized to edit this program.</p>
             <div class="overlay-btn">
                 <p class="btns btn-ok"><span><a href="#">OK</a></span></p>
             </div>
@@ -135,7 +135,7 @@
 <!-- content-main-tmpl Begin -->
 <script id="content-main-tmpl" type="text/x-jquery-tmpl">
 <div id="title-func" class="clearfix">
-    <h2>${nn._([cms.global.PAGE_ID, 'title-func', 'My Channels &gt; Create a new channel'])}</h2>
+    <h2>${nn._([cms.global.PAGE_ID, 'title-func', 'My Programs &gt; Create a new program'])}</h2>
     <p class="required"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'title-func', 'Required field'])}</p>
 </div>
 <div id="content-main-wrap" class="footer-on">
@@ -150,7 +150,7 @@
         </div>
     </div>
     <div class="fminput clearfix">
-        <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Channel logo'])}</label>
+        <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Program logo'])}</label>
         <div class="fmfield upload-img">
             <div class="thumbnail">
                 <div class="img-wrap">
@@ -175,7 +175,7 @@
         </div>
     </div>
     <div class="fminput clearfix">
-        <label><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'setting-form', 'Channel language'])}</label>
+        <label><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'setting-form', 'Program language'])}</label>
         <div class="fmfield">
             <div class="select enable">
                 <p class="select-btn"></p>
