--- a/episode-list.html
+++ b/episode-list.html
@@ -36,7 +36,7 @@
     <div class="studio-nav-wrap">
         <h3><a href="index.html"><span class="cms-icon">CMS</span><span class="sub-title">Content Management System</span></a></h3>
         <ul>
-            <li class="on"><span><a href="index.html">My Channels</a></span></li>
+            <li class="on"><span><a href="index.html">My Programs</a></span></li>
             <li id="my-portal" class="hide"><span><a href="portal-manage.html">My Portal</a></span></li>
         </ul>
         <div class="studio-setup">
@@ -105,7 +105,7 @@
     <div class="overlay-container">
         <div class="overlay-wrap">
             <a href="#" class="btn-close">Close</a>
-            <p class="content">You are not authorized to edit episodes in this channel.</p>
+            <p class="content">You are not authorized to edit episodes in this program.</p>
             <div class="overlay-btn">
                 <p class="btns btn-ok"><span><a href="#">OK</a></span></p>
             </div>
@@ -153,7 +153,7 @@
 {{else}}
     <li class="active"><a href="episode-list.html?id=${id}" class="episode">${nn._([cms.global.PAGE_ID, 'func-nav', 'Episode list'])}</a></li>
     {{if !cms.global.IS_REMARK}}
-    <li><a href="channel-poi.html?id=${id}" class="poi">${nn._([cms.global.PAGE_ID, 'func-nav', 'Channel POI'])}</a></li>
+    <li><a href="channel-poi.html?id=${id}" class="poi">${nn._([cms.global.PAGE_ID, 'func-nav', 'Program POI'])}</a></li>
     {{/if}}
     <li><a href="channel-setting.html?id=${id}" class="setting">${nn._([cms.global.PAGE_ID, 'func-nav', 'Settings'])}</a></li>
 {{/if}}
@@ -359,15 +359,15 @@
                     <span class="duration"><span class="time-right"><span class="time-middle">${cms.common.formatDuration(duration)}</span></span></span>
                 </div>
             </div>
-			<div class="check" data-meta="${id}">
-				<div class="btn" id="yuchk-btn-${id}"></div>
-			    <div class="tip-white">
+            <div class="check" data-meta="${id}">
+                <div class="btn" id="yuchk-btn-${id}"></div>
+                <div class="tip-white">
                     <p class="left"></p>
                     <p class="center" id="yuchk-msg-${id}">${nn._([cms.global.PAGE_ID, 'episode-list', 'Video check'])}</p>
                     <p class="right"></p>    
                 </div>
                 <div class="tip-bottom"></div>
-			</div>
+            </div>
             <h3><a href="${playbackUrl}" target="_blank">${name}</a></h3>
             <div class="btns">
                 <div class="btn-wrap enable">
