--- a/store-manage.html
+++ b/store-manage.html
@@ -62,8 +62,8 @@
                 <li>
                 	<a href="store-manage.html" class="store langkey">Channel Store</a>
                 	<ul class="sub-nav">
-                		<li><a href="#">Promotion Category</a></li>
-                        <li class="active"><a href="#">System Category</a></li>
+                		<li><a href="store-promotion.html">Promotion Category</a></li>
+                        <li class="active"><a href="store-manage.html">System Category</a></li>
                     </ul>
                 </li>
                 <li><a href="brand-setting.html" class="brand langkey">Brand Settings</a></li>
